force-app/main/default/objects/Composite_Document_Template__c/Composite_Document_Template__c.object-meta.xml
<CustomObject>
    <label>Composite Document Template</label>
    <pluralLabel>Composite Document Templates</pluralLabel>
    <nameField>
        <displayFormat>CDT-{00000}</displayFormat>
        <label>Junction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <description>Junction object linking Composite Documents to Document Templates with namespace isolation and sequence ordering.</description>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>