force-app/main/default/objects/Composite_Document_Template__c/fields/Composite_Document__c.field-meta.xml
<CustomField>
    <fullName>Composite_Document__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the parent Composite Document configuration.</description>
    <label>Composite Document</label>
    <referenceTo>Composite_Document__c</referenceTo>
    <relationshipLabel>Composite Document Templates</relationshipLabel>
    <relationshipName>Composite_Document_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>