force-app/main/default/objects/Composite_Document_Template__c/fields/Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Document_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the Docgen Template used for this section of the composite document.</description>
    <label>Document Template</label>
    <referenceTo>Docgen_Template__c</referenceTo>
    <relationshipLabel>Composite Document Templates</relationshipLabel>
    <relationshipName>Composite_Document_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>