force-app/main/default/objects/Composite_Document_Template__c/fields/Inclusion_Formula__c.field-meta.xml
<CustomField>
    <fullName>Inclusion_Formula__c</fullName>
    <description>Boolean Salesforce formula evaluated against this template's source record. The template is merged only when the formula evaluates to true. Leave blank to always include the template.</description>
    <inlineHelpText>Salesforce Boolean formula evaluated against this template's source record. Leave blank to always include.</inlineHelpText>
    <label>Inclusion Formula</label>
    <length>3900</length>
    <type>LongTextArea</type>
</CustomField>