force-app/main/default/objects/Composite_Document_Template__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this template should be included in composite document generation.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>