force-app/main/default/objects/Composite_Document_Template__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <description>Data key in the merged JSON envelope (e.g., 'Account', 'Opportunities', 'Terms'). Must be unique per Composite Document.</description>
    <inlineHelpText>Data key in merged JSON (e.g., 'Account', 'Opportunities', 'Terms')</inlineHelpText>
    <label>Namespace</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>