force-app/main/default/objects/Composite_Document_Template__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Execution order for data providers and concatenation order for DOCX documents. Lower numbers execute first.</description>
    <inlineHelpText>Execution order for data providers and concatenation order for DOCX</inlineHelpText>
    <label>Sequence</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>