force-app/main/default/objects/Composite_Document_Template__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Formula field for display purposes showing Composite Document + Namespace combination. Uniqueness enforced programmatically in Apex.</description>
    <formula>Composite_Document__c &amp; &apos; | &apos; &amp; Namespace__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Key</label>
    <type>Text</type>
</CustomField>