force-app/main/default/objects/Composite_Document_Template__c/validationRules/Inclusion_Formula_Requires_Concatenate.validationRule-meta.xml
<ValidationRule>
    <fullName>Inclusion_Formula_Requires_Concatenate</fullName>
    <active>true</active>
    <description>Inclusion formulas can skip individual files only when the parent composite uses Concatenate Templates.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Inclusion_Formula__c)),
    NOT(ISPICKVAL(Composite_Document__r.Template_Strategy__c, &quot;Concatenate Templates&quot;))
)</errorConditionFormula>
    <errorDisplayField>Inclusion_Formula__c</errorDisplayField>
    <errorMessage>Inclusion Formula is supported only when the Composite Document strategy is 'Concatenate Templates'.</errorMessage>
</ValidationRule>